KIBON-809 Fix all design issues -> Strong Text, Info Text vertical align mit Icons, Button gleich Gross unabhängig von Text + TS + GEM Wahl vergrössert

--- a/ebegu-web/src/app/onboarding/onboarding/onboarding.component.less
+++ b/ebegu-web/src/app/onboarding/onboarding/onboarding.component.less
@@ -20,6 +20,8 @@
     margin-top: 5vh;
     text-align: center;
     line-height: 2.8rem;
+    margin-left: 11vw;
+    margin-right: 11vw;
 
     a {
         color: @red;
@@ -28,6 +30,16 @@
         letter-spacing: 0.83px;
         line-height: 17px;
     }
+}
+
+.onboarding-login-buttons{
+    width: 55%;
+    margin: auto;
+}
+
+.onboarding-login-button-width{
+    width: 100%;
+    padding: 0 0 0;
 }
 
 :host {
